--- a/css/base.css
+++ b/css/base.css
@@ -51,3 +51,51 @@
     right:20px;
     background:#ccc;
 }
+
+
+/*formal*/
+test{
+    border:1px solid green;
+}
+body{
+    margin:0;
+    padding:0;
+    width: 100%;
+    max-width: 100%;
+    min-width: 320px;
+    height:100%;
+}
+a,li,ul{
+    text-decoration: none;
+    list-style-type: none;
+    color: #000;
+}
+.met-navfixed{
+
+}
+.container {
+    max-width: 100%;
+    border:1px solid green;
+}
+.inline >div,.inline >ul,.inline >li{
+    display:inline-block;
+}
+.item-header{
+
+}
+.item-lg-header{
+    font-size: 24px;
+    margin-top: 0px;
+    text-align: center;
+    margin-bottom: 0px;
+    color: #444;
+}
+.item-sm-header{
+    font-size: 13px;
+    text-align: center;
+    width: 80%;
+    color: #848484;
+    margin: 0px auto;
+    margin-bottom: 10px;
+    font-family: "Microsoft YaHei";
+}
